bugfix/704 - adds flex-grow property to #command selector to align the controls and score modules to the right side of the footer

--- a/src/assets/style/module/command/_command.less
+++ b/src/assets/style/module/command/_command.less
@@ -3,7 +3,7 @@
 #command:focus {
     height: 100%;
     padding: 0 18px;
-    flex-basis: 300px;
+    flex-grow: 1;
     background-color: transparent;
     font-size: 100%;
     font-family: inherit;
